# ai-video-agent

./: .env.example  .gitignore  CHANGES.md  Makefile  README.md  pyproject.toml  requirements.txt
out_test/prompts/: Aries.txt
src/render/: __init__.py  subtitle_utils.py  veo_horoscope_pipeline.py
src/write/: horoscope_writer.py
